# miner2

./: .gitignore  CMakeLists.txt  QtAwesome.cpp  README.md  constants.cpp  constants.h  fonts.qrc  graphicscard.cpp  graphicscard.h  images.qrc  main.cpp  miner2.pro  minerchart.h  minerprocess.cpp  minerprocess.h  minerui.cpp  minerui.h  settingsmanager.h
